ingress-demo/ingress-rules-path-based-routing.yaml
#Ingress creation for all the above
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-3
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - app.ot-xecm.com
    secretName: nginx-demo-tls
  rules:
  - host: app.ot-xecm.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 80
