ingress-demo/simple-eg1-ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  tls:
  - hosts:
      - testing.ot-xecm.com
    secretName: demo-tls-secret
  rules:
  - host: "testing.ot-xecm.com"
    https:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodeport-demo
            port:
              number: 80
